Add Movie datasource di and fixed mapper

--- a/tmdbandroid/app/src/main/res/values/config.xml
+++ b/tmdbandroid/app/src/main/res/values/config.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="tmdb_api_key">c1edacbc247d55feab86671719d52bc2</string>
-    <string name="tmdb_api_token">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJjMWVkYWNiYzI0N2Q1NWZlYWI4NjY3MTcxOWQ1MmJjMiIsInN1YiI6IjVhYjkwMWI0OTI1MTQxNGQzYTAwMDA3OCIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.D8NYJzJG0AIJwRqLpSs2T-KmrC4k1_tiqEBkTCyGSqk</string>
-    <string name="tmdb_base_url">https://api.themoviedb.org/</string>
+    <string name="tmdb_base_url">https://api.themoviedb.org</string>
     <string name="tmdb_image_url">https://image.tmdb.org/t/p/w500</string>
 
     <string name="app_language">fr-FR</string>
